--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,19 +1,16 @@
 Package: optimizeR
-Title: What the Package Does (One Line, Title Case)
-Version: 0.0.0.9000
+Title: Gradient Descent and Stochastic Gradient Descent Package
+Version: 1
 Authors@R: 
-    person(given = "First",
-           family = "Last",
-           role = c("aut", "cre"),
-           email = "first.last@example.com",
-           comment = c(ORCID = "YOUR-ORCID-ID"))
+    person(given = "Conor",
+           family = "Newton",
+           email = "conornewton@gmail.com",
 Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to
-    pick a license
+License: MIT
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
-Suggests: 
+Suggests:
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
