--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
-Package: optimizeR
+Package: Optimize-SC1
 Title: Gradient Descent and Stochastic Gradient Descent Package
-Version: 1
+Version: 1.0
 Authors@R: 
     person(given = "Conor",
            family = "Newton",
-           email = "conornewton@gmail.com",
+           email = "conornewton@gmail.com")
 Description: What the package does (one paragraph).
 License: MIT
 Encoding: UTF-8
