--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,8 +4,9 @@ Version: 1.0
 Authors@R:
     person(given = "Conor",
            family = "Newton",
-           email = "conornewton@gmail.com")
-Description: What the package does (one paragraph).
+           email = "conornewton@gmail.com",
+           role = c("aut"))
+Description: Gradient descent and Stochastic descent package, made for statistical-computing-1
 License: MIT
 Encoding: UTF-8
 LazyData: true
